--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,5 @@
 .app-container {
   max-width: 800px;
-  margin: 40px auto;
-  padding: 20px;
   background-color: #f9f9f9;
   border: 1px solid #ddd;
   border-radius: 10px;
@@ -17,11 +15,37 @@ button {
   background-color: #4CAF50;
   color: #fff;
   border: none;
-  padding: 10px 20px;
   font-size: 16px;
   cursor: pointer;
 }
+::-webkit-scrollbar {
+    width: 0;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px #ffffff; 
+    border-radius: 5px;
+  }
+   
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: #FF8D3F; 
+    border-radius: 5px;
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #ffffff; 
+  }
 
-button:hover {
-  background-color: #3e8e41;
+  /* Tailwind CSS orqali qo'shimcha sinf */
+.scrollbar-hidden::-webkit-scrollbar {
+    height: 0;
+}
+
+.scrollbar-hidden {
+    /* Firefox */
+    -ms-overflow-style: none;
+    /* Internet Explorer and Edge */
 }
