--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,13 @@
 .app-container {
   max-width: 800px;
-  background-color: #f9f9f9;
+  background-color: #f4f4f4;
   border: 1px solid #ddd;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 .dark-mode {
-  background-color: #333;
+  background-color: #zzz;
   color: #fff;
 }
 
